--- a/style.css
+++ b/style.css
@@ -52,6 +52,21 @@ header p {
   font-size: 16px;
 }
 
+.about {
+  margin: 40px;
+  text-align: center;
+}
+
+.about h2 {
+  font-size: 1.8em;
+  margin-bottom: 10px;
+}
+
+.about p {
+  font-size: 1.1em;
+  line-height: 1.6;
+}
+
 #fullImageModal {
   display: none;
   position: fixed;
